refactor: add null-safety checks using Objects.requireNonNull across service layer methods